<resources>
    <string name="app_name">Mighty_Food</string>
    <string name="viewID1">Mighty Food</string>
    <string name="viewID2">Get Started!!!</string>
    <string name="btnStart">Get Started !!!</string>
    <string name="todo">TODO</string>
    <string name="viewID3">Hi please sign in</string>
    <string name="searchID">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="food_items">Food Items</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="orders">Orders</string>
    <string name="feedback">Feedback</string>
    <string name="register_here">Register Here</string>
    <string name="my_cart">My Cart</string>
    <string name="items_total">Items Total</string>
    <string name="rs0">Rs0</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="rs01">Rs0</string>
    <string name="tax">Tax</string>
    <string name="rs02">Rs0</string>
    <string name="total">Total:</string>
    <string name="rs03">Rs0</string>
    <string name="feedback1">Feedback</string>
    <string name="orders1">Orders</string>
    <string name="login1">Login</string>
    <string name="home1">Home</string>
    <string name="your_cart_is_empty">Your Cart Is Empty</string>
    <string name="checkout">CheckOut</string>
    <string name="username">Username</string>
    <string name="mobile">mobile</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="retype_password">Retype password</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="login_now">Login Now</string>
    <string name="login_here">Login Here</string>
    <string name="usernameString">Username</string>
    <string name="passwordString">password</string>
    <string name="loginString">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="titleString">title</string>
    <string name="rsString">Rs</string>
    <string name="_1">1</string>
    <string name="description">description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="title">title</string>
    <string name="_1s1">1</string>
    <string name="_0">0</string>
    <string name="rs">Rs</string>
    <string name="_0_2">0</string>
    <string name="rsString2">Rs</string>
    <string name="title3">title</string>
    <string name="_0_04">0.0</string>
    <string name="rs5">Rs</string>
    <string name="add">+Add</string>
    <string name="todo2">TODO</string>
</resources>